--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -3,6 +3,16 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 
+# datasource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sentinel_db
+spring.datasource.username=root
+spring.datasource.password=root
+
+# spring data jpa
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+
 #logging settings
 logging.level.org.springframework.web=INFO
 logging.file=${user.home}/logs/csp/sentinel-dashboard.log
