--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.password=root
 
 # spring data jpa
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.show-sql=false
 
 #logging settings
