--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -4,19 +4,23 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 
 # datasource
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/sentinel_db
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=${spring.datasource.url}
+#spring.datasource.username=${spring.datasource.username}
+#spring.datasource.password=${spring.datasource.password}
+
+spring.datasource.url=jdbc:mysql://mysql.test.winxuan.io:55517/wx_sentinel
+spring.datasource.username=sent_test_all
+spring.datasource.password=43hg32tgregt23qg4323tr23t
 
 # spring data jpa
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.hibernate.use-new-id-generator-mappings=false
-#spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.show-sql=false
 
-influxdb.url=http://localhost:8086
-influxdb.username=admin
-influxdb.password=123456
+#influxdb.url=http://localhost:8086
+#influxdb.username=admin
+#influxdb.password=123456
 
 #logging settings
 logging.level.org.springframework.web=INFO
