--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 
-#influxdb.url=http://localhost:8086
-#influxdb.username=admin
-#influxdb.password=123456
+influxdb.url=${influxdb.url}
+influxdb.username=${influxdb.username}
+influxdb.password=${influxdb.password}
 
 #logging settings
 logging.level.org.springframework.web=INFO
