--- a/sentinel-dashboard/pom.xml
+++ b/sentinel-dashboard/pom.xml
@@ -201,6 +201,9 @@
                 <spring.datasource.url>jdbc:mysql://mysql.test.winxuan.io:55517/wx_sentinel</spring.datasource.url>
                 <spring.datasource.username>sent_test_all</spring.datasource.username>
                 <spring.datasource.password>43hg32tgregt23qg4323tr23t</spring.datasource.password>
+                <influxdb.url>http://localhost:8086</influxdb.url>
+                <influxdb.username>admin</influxdb.username>
+                <influxdb.password>123456</influxdb.password>
             </properties>
         </profile>
         <profile>
@@ -215,6 +218,9 @@
                 <spring.datasource.url>jdbc:mysql://10.100.12.122:33317/wx_sentinel</spring.datasource.url>
                 <spring.datasource.username>sent_test_all</spring.datasource.username>
                 <spring.datasource.password>4trg3w4tw4t23rt24yg23</spring.datasource.password>
+                <influxdb.url>http://localhost:8086</influxdb.url>
+                <influxdb.username>admin</influxdb.username>
+                <influxdb.password>123456</influxdb.password>
             </properties>
         </profile>
         <profile>
@@ -229,6 +235,9 @@
                 <spring.datasource.url>jdbc:mysql://10.1.2.15:33356/wx_sentinel</spring.datasource.url>
                 <spring.datasource.username>st_online</spring.datasource.username>
                 <spring.datasource.password>45ge5y435634herg34534</spring.datasource.password>
+                <influxdb.url>http://localhost:8086</influxdb.url>
+                <influxdb.username>admin</influxdb.username>
+                <influxdb.password>123456</influxdb.password>
             </properties>
         </profile>
     </profiles>
