--- a/sentinel-dashboard/pom.xml
+++ b/sentinel-dashboard/pom.xml
@@ -198,9 +198,12 @@
                 </property>
             </activation>
             <properties>
-                <spring.datasource.url>jdbc:mysql://localhost:55517/sentinel_db</spring.datasource.url>
+                <spring.datasource.url>jdbc:mysql://localhost:3306/sentinel_db</spring.datasource.url>
                 <spring.datasource.username>root</spring.datasource.username>
                 <spring.datasource.password>root</spring.datasource.password>
+                <influxdb.url>http://localhost:8086</influxdb.url>
+                <influxdb.username>admin</influxdb.username>
+                <influxdb.password>123456</influxdb.password>
             </properties>
         </profile>
     </profiles>
