--- a/sentinel-demo/sentinel-demo-apache-dubbo/pom.xml
+++ b/sentinel-demo/sentinel-demo-apache-dubbo/pom.xml
@@ -16,6 +16,7 @@
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
             <version>2.7.3</version>
+            <!--<version>2.7.5</version>-->
         </dependency>
 
         <!-- Dubbo provides qos plugin and is enable by default. -->
